Closed Bug 641927 Opened 15 years ago Closed 15 years ago

too many compiler warnings in Cocoa widgets

Categories

(Core :: Widget: Cocoa, defect)

All
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

References

Details

Attachments

(1 file)

We've built up a pretty large number of compiler warnings in Cocoa widget code. It's getting hard to see when new warnings come up. We should clean things up. This bug isn't necessarily about getting rid of *all* warnings, but we should make things significantly better.
Attached patch fix v1.0Splinter Review
This gets rid of just about everything that isn't a deprecated Apple API warning.
Attachment #519486 - Flags: review?(b56girard)
Comment on attachment 519486 [details] [diff] [review] fix v1.0 Yay, less warnings! Patch is good.
Attachment #519486 - Flags: review?(b56girard) → review+
This actually removes *all* warnings for 64-bit. Haven't seen that in years :)
Comment on attachment 519486 [details] [diff] [review] fix v1.0 Requesting review from bsmedberg for xpcom changes.
Attachment #519486 - Flags: review?(benjamin)
Attachment #519486 - Flags: review?(benjamin) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: