Bug 641927: Fix a large number of compiler warnings in Mac OS X code. r=benwa,bsmedberg