widget/src/cocoa/nsCocoaWindow.mm
@@ -933,6 +933,15 @@ nsCocoaWindow::ConfigureChildren(const nsTArray<Configuration>& aConfigurations)
 }
 
 LayerManager*
+nsCocoaWindow::GetLayerManager(bool *aAllowRetaining)
+{
+  if (mPopupContentView) {
+    return mPopupContentView->GetLayerManager(aAllowRetaining);
+  }
+  return nsnull;
+}
+
+LayerManager*
 nsCocoaWindow::GetLayerManager(LayerManagerPersistence, bool* aAllowRetaining)
 {
   if (mPopupContentView) {
